--- a/agateemeelle.html
+++ b/agateemeelle.html
@@ -7,8 +7,10 @@
     <title>Formularios</title>
 </head>
 <body>  
-    <h1>oi</h1>
-    <label for="nome">nome:</label>
-    <input type="id">
+    <h1>Programa Olá Você</h1>
+    <label for="nome">Nome: </label>
+    <input type="text" id="nome">
+    <input type="button" value="mostrar" id="mostrar">
+    <p id="resposta"></p>
 </body>
 </html>
