--- a/agateemeelle.html
+++ b/agateemeelle.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js.js"></script>
+    <script src="./js.js"></script>
     <title>Formularios</title>
 </head>
 <body>  
-    <h1>Programa Olá Você</h1>
-    <label for="nome">Nome: </label>
+    <h1>oi</h1>
+    <label>Nome: </label>
     <input type="text" id="nome">
     <input type="button" value="mostrar" id="mostrar">
     <p id="resposta"></p>
